--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Daemon</title>
+		<title>哈宝集中营</title>
 	</head>
 	<body>
-		<p>hello world!</p>
+		<p>哈宝集中营</p>
 	</body>
 </html>
