--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<title>哈宝集中营</title>
 	</head>
 	<body>
-		<p>哈宝集中营</p>
+
+		<script src="js/Bmob-1.6.7.min.js"></script>
+
+		<p> 匿名发言 列表 </p>
+		<ul id="lists">
+			<li v-for="item in items">
+				{{item.message +' -> '+item.date}}
+			</li>
+		</ul>
+
+
+		<div id="input_content">
+			<input v-model="content" placeholder="写点啥">
+		</div>
+		<div id="bt_send">
+			<button v-on:click="send">说点悄悄话</button>
+		</div>
+
+
+
+		<script src="js/index.js"></script>
 	</body>
 </html>
