--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<title>哈宝集中营</title>
 	</head>
-	<body>
+	<body class="main">
 
 		<script src="js/Bmob-1.6.7.min.js"></script>
+
+
 
 		<p> 匿名发言 列表 </p>
 		<ul id="lists">
@@ -23,7 +26,6 @@
 		<div id="bt_send">
 			<button v-on:click="send">说点悄悄话</button>
 		</div>
-
 
 
 		<script src="js/index.js"></script>
