--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-		<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<title>哈宝集中营</title>
 	</head>
