--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-		<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/index.css" />
-		<title>哈宝集中营</title>
-	</head>
-	<body class="main">
-
-		<script src="js/Bmob-1.6.7.min.js"></script>
-
-
-
-		<p id="tag">{{tag_str}} </p>
-		<ul id="lists">
-			<li v-for="item in items">
-				{{item.message +' -> '+item.date+'  -> '+item.ip}}
-			</li>
-		</ul>
-
-
-		<div id="input_content">
-			<input v-model="content" placeholder="写点啥">
-		</div>
-		<div id="bt_send">
-			<button v-on:click="send">说点悄悄话</button>
-		</div>
-
-
-		<script src="js/index.js"></script>
-	</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>demo1</title><link href=/static/css/app.32793c99d1ee5ea538e8335da85e9a61.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.fcb6d24c61cf312c4c68.js></script><script type=text/javascript src=/static/js/app.f554c52d5ee57323c2fe.js></script></body></html>
